# procstream

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/procstream/: __init__.py  _async.py  _core.py  _sync.py  _types.py
tests/: test_async.py  test_new_features.py  test_procstream.py
