[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "procstream"
dynamic = ["version"]
description = "Stream subprocess output with timeouts, tree-kill, and sane defaults."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "farkhad", email = "bennett@frkhd.com" }]
keywords = ["subprocess", "streaming", "process", "shell", "tree-kill", "timeout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/f4rkh4d/procstream"
Issues = "https://github.com/f4rkh4d/procstream/issues"
Source = "https://github.com/f4rkh4d/procstream"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.version]
path = "src/procstream/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/procstream"]

[tool.hatch.build.targets.sdist]
include = ["src/procstream", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF"]
ignore = ["E501", "SIM105"]  # SIM105 suggests contextlib.suppress — we prefer try/except for robustness in our signal paths

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "B017", "F841"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/procstream"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
